# pixnet-images-to-wp

./: .gitignore  LICENSE  README.md  pyproject.toml
images/: index.json
move_images/: app.py  tasks.py  util.py
move_images.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
move_images/util/: __init__.py  func.py  post.py
tests/: test_move_images.py
